--- a/MercadoBitcoin.xcodeproj/xcshareddata/xcschemes/MercadoBitcoinMock.xcscheme
+++ b/MercadoBitcoin.xcodeproj/xcshareddata/xcschemes/MercadoBitcoinMock.xcscheme
@@ -20,6 +20,34 @@
                ReferencedContainer = "container:MercadoBitcoin.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "147ED4D62994942A0021332D"
+               BuildableName = "MercadoBitcoinUITests.xctest"
+               BlueprintName = "MercadoBitcoinUITests"
+               ReferencedContainer = "container:MercadoBitcoin.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "147ED4CC2994942A0021332D"
+               BuildableName = "MercadoBitcoinTests.xctest"
+               BlueprintName = "MercadoBitcoinTests"
+               ReferencedContainer = "container:MercadoBitcoin.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
@@ -28,6 +56,26 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "147ED4D62994942A0021332D"
+               BuildableName = "MercadoBitcoinUITests.xctest"
+               BlueprintName = "MercadoBitcoinUITests"
+               ReferencedContainer = "container:MercadoBitcoin.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "147ED4CC2994942A0021332D"
+               BuildableName = "MercadoBitcoinTests.xctest"
+               BlueprintName = "MercadoBitcoinTests"
+               ReferencedContainer = "container:MercadoBitcoin.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
